--- a/signup.html
+++ b/signup.html
@@ -59,7 +59,8 @@
             Sign Up
           </button>
           <p class="text-white">
-            You have an account? <a class="text-white" href="/">Signin</a>
+            You have an account?
+            <a class="text-white" href="index.html">Signin</a>
           </p>
         </div>
       </div>
