--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
             <li class="nav-item">
               <a
                 class="nav-link btn btn-outline-warning"
-                href="index.html"
+                href="/index.html"
                 onclick="logout()"
                 >Logout</a
               >
