--- a/signup.html
+++ b/signup.html
@@ -60,7 +60,7 @@
           </button>
           <p class="text-white">
             You have an account?
-            <a class="text-white" href="/index.html">Signin</a>
+            <a class="text-white" href="index.html">Signin</a>
           </p>
         </div>
       </div>
