--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </button>
           <p class="text-white">
             Don’t have an account?
-            <a class="text-white" href="/signup.html">Sign Up</a>
+            <a class="text-white" href="signup.html">Sign Up</a>
           </p>
         </div>
       </div>
