--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <title>Home</title>
 
     <!-- base url -->
-    <base href="/Assigment-11/" />
+    <!-- <base href="/Assigment-11/" /> -->
 
     <!-- Bootstrap CSS -->
     <link
@@ -51,7 +51,7 @@
             <li class="nav-item">
               <a
                 class="nav-link btn btn-outline-warning"
-                href="index.html"
+                href="/Assigment-11/index.html"
                 onclick="logout()"
                 >Logout</a
               >
