--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <title>Home</title>
 
     <!-- base url -->
-    <!-- <base href="/Assigment-11/" /> -->
+    <base href="/Assigment-11/" />
 
     <!-- Bootstrap CSS -->
     <link
